--- a/_posts/2009-09-18-atom-schema.textile
+++ b/_posts/2009-09-18-atom-schema.textile
@@ -7,7 +7,7 @@ author_uri: http://ouvre-boite.com
 author_email_md5: b30ce50678f0e934eaa6697425c59dd7
 ---
 
-We deployed yesterday a new code for our parsers, and it now includes a more "complete schema":http://superfeedr.com/documentation#schema that will allow you to do a lot more things with superfeedr!
+We deployed yesterday a new code for our parsers, and it now includes a more "complete schema":http://documentation.superfeedr.com/schema.html that will allow you to do a lot more things with superfeedr!
 
 h3. Content or summary?
 
