--- a/_posts/2009-12-29-feedoor-and-superfeedr.textile
+++ b/_posts/2009-12-29-feedoor-and-superfeedr.textile
@@ -19,12 +19,12 @@ bq. Our major concern was to make all bloggers able to *enable real-time support
 
 bq. In the beginning we supported "RssCloud":http://rsscloud.org/ protocol and then "Pubsubhubbub":http://code.google.com/p/pubsubhubbub/, these protocols are the most well known protocols in the world of real-time, however, *the problem lies in the lack of real-time protocols in most feeds*, which means that we need to find a smart solution to overcome this problem. The solution is to poll feeds with no real-time protocol periodically and intelligently, and then match with the previous content, if there is new content we ping feed services and subscribers, this is the only way we can achieve as close as possible to real-time for feeds with no real-time protocols. For those who do not know how difficult this process is,* the process of polling thousands of feeds several times a day needs lots of resources and planning, it's simply a very crazy task*. Luckily we found a crazy service which already do that exact thing we needed and surprisingly they do it right and efficiently, *Superfeedr, they're so crazy* but glad we found them. Now when ever we manage a feed with no real-time protocol we send it to Superfeedr and *they do the polling and the checking on our behalf*, and all we need to do is waiting for their pings :)
 
-bq. As for how to integrate Superfeedr in our service, we used "their HTTP API":http://superfeedr.com/documentation#pubsubhubbub, it was *very easy* and just like dealing with Pubsubhubbub real-time protocol as *they use the same specifications*, they are a big hub that supports all real-time protocols and smartly poll feeds frequently.
+bq. As for how to integrate Superfeedr in our service, we used "their HTTP API":http://documentation.superfeedr.com/subscribers.html#webhooks, it was *very easy* and just like dealing with Pubsubhubbub real-time protocol as *they use the same specifications*, they are a big hub that supports all real-time protocols and smartly poll feeds frequently.
 
 
 Here is what Feedoor used to integrate with Superfeedr :
 
-* Superfeedr API: "_HTTP API_":http://superfeedr.com/documentation#pubsubhubbub
+* Superfeedr API: "_HTTP API_":http://documentation.superfeedr.com/subscribers.html#webhooks
 * Programming Language Used: _Perl_
 * Modules and Libraries: _In house_
 
