--- a/_posts/2010-02-08-secure-pubsubhubbub.textile
+++ b/_posts/2010-02-08-secure-pubsubhubbub.textile
@@ -7,7 +7,7 @@ author_uri: http://ouvre-boite.com
 author_email_md5: b30ce50678f0e934eaa6697425c59dd7
 ---
 
-One of the great advantages of our "XMPP API":http://superfeedr.com/documentation#xmpp_pubsub is that there is no need for the subscriber to know whether the content he gets is actually from Superfeedr. "PubSubHubbub":http://superfeedr.com/documentation#pubsubhubbub doesn't benefit from that, since it relies on HTTP callbacks which makes it hard to know where a notification comes from. A subscriber could obviously check the IP(s) as well as the UserAgent, but the first one will break when we add servers and the second one is pretty easy to spoof.
+One of the great advantages of our "XMPP API":http://documentation.superfeedr.com/subscribers.html#xmpppubsub is that there is no need for the subscriber to know whether the content he gets is actually from Superfeedr. "PubSubHubbub":http://documentation.superfeedr.com/subscribers.html#webhooks doesn't benefit from that, since it relies on HTTP callbacks which makes it hard to know where a notification comes from. A subscriber could obviously check the IP(s) as well as the UserAgent, but the first one will break when we add servers and the second one is pretty easy to spoof.
 
 The "protocol":http://pubsubhubbub.googlecode.com/svn/trunk/pubsubhubbub-core-0.2.html defines a strategy for that and we implement it at Superfeedr. Here is how it works :
 
