--- a/_posts/2009-11-24-added-title-to-feed-info.textile
+++ b/_posts/2009-11-24-added-title-to-feed-info.textile
@@ -14,4 +14,4 @@ This has been one of the _earliest feature requests_ that we had : *feed titles 
 In many apps it's crucial to show the user with the feed title. Up until now you needed to poll the feeds once in while to get that information.
 From now on, you'll get the title in your notifications :)
 
-With "PubSubHubbub":http://superfeedr.com/documentation#pubsubhubbub, it's part of the <feed> element. With our "XMPP API":http://superfeedr.com/documentation#xmpp_api, it's included in the <status> element. Check "our schema":http://superfeedr.com/documentation#schema for a refresher :)
+With "PubSubHubbub":http://documentation.superfeedr.com/subscribers.html#webhooks, it's part of the <feed> element. With our "XMPP API":http://documentation.superfeedr.com/subscribers.html#xmpppubsub, it's included in the <status> element. Check "our schema":http://documentation.superfeedr.com/schema.html for a refresher :)
