--- a/_posts/2010-04-13-a-social-network.textile
+++ b/_posts/2010-04-13-a-social-network.textile
@@ -11,7 +11,7 @@ There are *two* steps to *open-data epiphany* : support the "OpenStack":http://o
 
 _It's like putting a treasure on Mars and tell you : hey, if you get there, it's yours, if you can come and get it_
 
-The second step is to actually tell you : *your data is available for you (or these apps), and I will push it to you (them)*, so it's available in *theory and in practice*. And that is what protocols like "PubSubHubbub":http://superfeedr.com/documentation#pubsubhubbub and "XMPP":http://onesocialweb.org/ are for : not only the data is available, but it's sent away.
+The second step is to actually tell you : *your data is available for you (or these apps), and I will push it to you (them)*, so it's available in *theory and in practice*. And that is what protocols like "PubSubHubbub":http://documentation.superfeedr.com/subscribers.html#webhooks and "XMPP":http://onesocialweb.org/ are for : not only the data is available, but it's sent away.
 
 It's pretty _common to oppose openness and business_. A lot of services see openness as a threat to their growth/profitability, and generally will see openness and general wellness of their business as incompatible. *This is wrong, I believe that sending data away is a an amazing driver for growth*.
 
