--- a/_posts/2010-12-02-websockets-and-comet.textile
+++ b/_posts/2010-12-02-websockets-and-comet.textile
@@ -7,7 +7,7 @@ author_uri: http://ouvre-boite.com
 author_email_md5: b30ce50678f0e934eaa6697425c59dd7
 ---
 
-Up until now, Superfeedr mostly focused on server to server communications (even though, technically, "XMPP":http://superfeedr.com/documentation#xmpp_pubsub also works very well with clients too). Today, we're announcing 2 server to client protocols, even though, they too, can be used for servers : *websockets* and *comet*. On both, we will push "JSON":http://superfeedr.com/documentation#json_schema by default.
+Up until now, Superfeedr mostly focused on server to server communications (even though, technically, "XMPP":http://documentation.superfeedr.com/subscribers.html#xmpppubsub also works very well with clients too). Today, we're announcing 2 server to client protocols, even though, they too, can be used for servers : *websockets* and *comet*. On both, we will push "JSON":http://documentation.superfeedr.com/schema.html#json by default.
 
 h3. Comet
 
@@ -18,7 +18,7 @@ Today, as a subscriber, you can also get Superfeedr's content pushed to you dire
 
 <script src="https://gist.github.com/726390.js?file=gistfile1.js"></script>
 
-As you can see the stream contains several types of messages not just the notifications. For example you can see the line that tells that this user just subscribed to a feed, and later unsubscribed. There is currently no protocol as for these streams, so we chose to adopt the "convention explained":http://blog.new-bamboo.co.uk/2010/2/10/json-event-based-convention-websockets by the folks at "new bamboo":http://new-bamboo.co.uk/ : each message is built with 2 elements : a 'verb' (_subscribe_, _unsubscribe_, _publish_ in our case), as well as scalar which gives more details. We obviously use our "JSON schema":http://superfeedr.com/documentation#json_schema.
+As you can see the stream contains several types of messages not just the notifications. For example you can see the line that tells that this user just subscribed to a feed, and later unsubscribed. There is currently no protocol as for these streams, so we chose to adopt the "convention explained":http://blog.new-bamboo.co.uk/2010/2/10/json-event-based-convention-websockets by the folks at "new bamboo":http://new-bamboo.co.uk/ : each message is built with 2 elements : a 'verb' (_subscribe_, _unsubscribe_, _publish_ in our case), as well as scalar which gives more details. We obviously use our "JSON schema":http://documentation.superfeedr.com/schema.html#json.
 
 Since an HTTP connection is still mostly one-way, there is no way to send data on this connection to subscribe to additional feeds for example. However, we also introduce a small REST-like API which allows you to subscribe to feeds or unsubscribe, based on your needs. Since we push the result of subscriptions to the stream, it's recommended to open a stream first, so you can see whether your subscription was a success or not.
 
